k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: afterpush-api
  namespace: afterpush-dev

spec:
  replicas: 2

  selector:
    matchLabels:
      app: afterpush-api

  template:
    metadata:
      labels:
        app: afterpush-api

    spec:
      containers:
        - name: afterpush-api
          image: afterpush-api:local
          imagePullPolicy: Never

          ports:
            - containerPort: 3000

          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 2
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
