k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: afterpush-api

spec:
  type: ClusterIP

  selector:
    app: afterpush-api

  ports:
    - port: 80
      targetPort: 3000
